Index page done, but needs tweaking on mobile. Fixing bug?

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,37 +1,1 @@
-/*
-Error: Invalid CSS after "...rt "index.scss"": expected "{", was ";"
-        on line 5 of assets/css/main.scss
-
-1: ---
-2: 
-3: ---
-4: 
-5: @import "index.scss";
-6: @import "default.scss";
-
-Backtrace:
-assets/css/main.scss:5
-/Users/tawfiq/.rbenv/versions/2.3.1/lib/ruby/gems/2.3.0/gems/sass-3.5.3/lib/sass/scss/parser.rb:1278:in `expected'
-/Users/tawfiq/.rbenv/versions/2.3.1/lib/ruby/gems/2.3.0/gems/sass-3.5.3/lib/sass/scss/parser.rb:1208:in `expected'
-/Users/tawfiq/.rbenv/versions/2.3.1/lib/ruby/gems/2.3.0/gems/sass-3.5.3/lib/sass/scss/parser.rb:1203:in `tok!'
-/Users/tawfiq/.rbenv/versions/2.3.1/lib/ruby/gems/2.3.0/gems/sass-3.5.3/lib/sass/scss/parser.rb:677:in `block'
-/Users/tawfiq/.rbenv/versions/2.3.1/lib/ruby/gems/2.3.0/gems/sass-3.5.3/lib/sass/scss/parser.rb:670:in `ruleset'
-/Users/tawfiq/.rbenv/versions/2.3.1/lib/ruby/gems/2.3.0/gems/sass-3.5.3/lib/sass/scss/parser.rb:696:in `block_child'
-/Users/tawfiq/.rbenv/versions/2.3.1/lib/ruby/gems/2.3.0/gems/sass-3.5.3/lib/sass/scss/parser.rb:686:in `block_contents'
-/Users/tawfiq/.rbenv/versions/2.3.1/lib/ruby/gems/2.3.0/gems/sass-3.5.3/lib/sass/scss/parser.rb:137:in `stylesheet'
-/Users/tawfiq/.rbenv/versions/2.3.1/lib/ruby/gems/2.3.0/gems/sass-3.5.3/lib/sass/scss/parser.rb:41:in `parse'
-/Users/tawfiq/.rbenv/versions/2.3.1/lib/ruby/gems/2.3.0/gems/sass-3.5.3/lib/sass/engine.rb:414:in `_to_tree'
-/Users/tawfiq/.rbenv/versions/2.3.1/lib/ruby/gems/2.3.0/gems/sass-3.5.3/lib/sass/engine.rb:389:in `_render_with_sourcemap'
-/Users/tawfiq/.rbenv/versions/2.3.1/lib/ruby/gems/2.3.0/gems/sass-3.5.3/lib/sass/engine.rb:307:in `render_with_sourcemap'
-/Users/tawfiq/.rbenv/versions/2.3.1/lib/ruby/gems/2.3.0/gems/sass-3.5.3/lib/sass/exec/sass_scss.rb:391:in `run'
-/Users/tawfiq/.rbenv/versions/2.3.1/lib/ruby/gems/2.3.0/gems/sass-3.5.3/lib/sass/exec/sass_scss.rb:63:in `process_result'
-/Users/tawfiq/.rbenv/versions/2.3.1/lib/ruby/gems/2.3.0/gems/sass-3.5.3/lib/sass/exec/base.rb:52:in `parse'
-/Users/tawfiq/.rbenv/versions/2.3.1/lib/ruby/gems/2.3.0/gems/sass-3.5.3/lib/sass/exec/base.rb:19:in `parse!'
-/Users/tawfiq/.rbenv/versions/2.3.1/lib/ruby/gems/2.3.0/gems/sass-3.5.3/bin/sass:13:in `<top (required)>'
-/Users/tawfiq/.rbenv/versions/2.3.1/bin/sass:23:in `load'
-/Users/tawfiq/.rbenv/versions/2.3.1/bin/sass:23:in `<main>'
-*/
-body:before {
-  white-space: pre;
-  font-family: monospace;
-  content: "Error: Invalid CSS after \"...rt \"index.scss\"\": expected \"{\", was \";\"\A         on line 5 of assets/css/main.scss\A \A 1: ---\A 2: \A 3: ---\A 4: \A 5: @import \"index.scss\";\A 6: @import \"default.scss\";"; }
+.page-container.index .main-content-container{grid-template-areas:"cover cover cover cover cover cover" " . posts posts posts  sidebar . ";grid-template-columns:0px 1fr 1fr 1fr 1fr 0px;display:grid;grid-gap:18px}@media (max-width: 767px){.page-container.index .main-content-container{grid-template-areas:"cover cover cover cover cover cover" " . posts posts posts posts . " " . sidebar sidebar sidebar sidebar . "}}.page-container.index .main-content-container .cover-stories{grid-area:cover}.page-container.index .main-content-container .home-page-posts{grid-area:posts;background:#333333;padding:0px 20px}.page-container.index .main-content-container .sidebar-container{grid-area:sidebar}#teaser-background{display:table;background:#fd746c;background:-webkit-linear-gradient(225deg, #fd746c, #ff9068);background:linear-gradient(225deg, #fd746c, #ff9068);width:100vw;height:100vh;position:fixed;z-index:20;left:0;top:0;opacity:1;transform:scale(1);transition:top 2s, opacity 2s, transform 1.5s}#teaser-background.animate{top:-10vh;opacity:0.0;transform:scale(0.95)}#teaser-background #teaser{text-align:center;display:table-cell;vertical-align:middle}#teaser-background #teaser h1,#teaser-background #teaser h2,#teaser-background #teaser h3{max-width:100%;text-align:center;color:white;padding:0px 20px}#teaser-background #teaser h1,#teaser-background #teaser h3{font-family:'Raleway', sans-serif;font-size:3.14em;font-weight:200}#teaser-background #teaser h2{font-family:'Libre Baskerville', serif;font-size:1.6em;font-style:italic}#teaser-background #teaser h3{font-style:italic;font-size:1em;margin-top:-3px}#cover-header{background:#fd746c;background:-webkit-linear-gradient(225deg, #fd746c, #ff9068);background:linear-gradient(225deg, #fd746c, #ff9068);text-align:center;color:white;vertical-align:middle;padding:50px 0px}#cover-header h1,#cover-header h2,#cover-header h3{max-width:100%;text-align:center;color:white;padding:0px 20px}#cover-header h1{font-family:'Raleway', sans-serif;font-size:3.14em;font-weight:200}#cover-header h2{font-family:'Libre Baskerville', serif;font-size:1.6em;font-style:italic}.cover-stories{display:grid;grid-template-columns:repeat(3, 1fr);grid-template-rows:repeat(3, 350px);background:#fd746c;background:-webkit-linear-gradient(225deg, #fd746c, #ff9068);background:linear-gradient(225deg, #fd746c, #ff9068);grid-gap:2px;padding:2px 2px;justify-content:center}.cover-stories .cover-story{height:350px;display:grid;grid-template-columns:1fr 1fr 1fr;background:#131313;color:white;overflow:hidden}.cover-stories .cover-story .text{grid-row:1 / 1;grid-column:1 / 1;padding:5px 10px}.cover-stories .cover-story .text .post-title a{color:white}.cover-stories .cover-story .image-col{grid-column:2 / span 2;max-height:350px;overflow:hidden;grid-row:1 / 1}.cover-stories .cover-story .image-col img{height:100%;width:100%;object-fit:cover;border-radius:0px}.cover-stories .cover-story.cover-story-wide{grid-column-end:span 2}.cover-stories .cover-story.cover-story-stacked{grid-template-rows:200px 150px}.cover-stories .cover-story.cover-story-stacked .text{grid-row:2 / 2;grid-column:1 / 4}.cover-stories .cover-story.cover-story-stacked .image-col{grid-column:1 / 4;grid-row:1 / 2}.home-page-posts h2{color:white;margin-bottom:20px;text-decoration:underline;font-size:2.5em}.home-page-posts .post{display:flex}@media (max-width: 767px){.home-page-posts .post{flex-direction:column}}@media (min-width: 768px){.home-page-posts .post{padding-right:20px}}.home-page-posts .post .image{flex-basis:30%;min-width:170px;padding-top:10px}.home-page-posts .post .info{flex-basis:70%;padding-left:20px}.home-page-posts .post .info .post-title a{color:white}.home-page-posts .post .info .post-summary{color:#d2d2d2}.home-page-posts .post-image{width:100%}.sidebar-container{border:1px solid;border-radius:2px;padding:10px;background:#3a3a3a}.sidebar h2{color:white;text-decoration:underline;margin-bottom:25px}@media (max-width: 767px){.sidebar .articles-list{display:flex;flex-wrap:wrap}.sidebar .articles-list h2{flex-basis:100%;text-align:center}.sidebar .articles-list .article{flex-basis:50%;margin-bottom:20px;margin-top:20px}}@media (max-width: 419px){.sidebar .articles-list .article{flex-basis:100%}}.sidebar .article{margin-bottom:25px;display:flex}.sidebar .article .article-image-wrapper{min-width:85px;max-width:85px;padding-right:10px}.sidebar .article .article-image-wrapper img{clip-path:circle(50% at 50% 50%);margin-top:5px}.sidebar .article .info .article-title{margin-bottom:10px}.sidebar .article .info .post-date{margin-bottom:0px;font-size:0.7em}.sidebar .article .info .tags{font-size:0.8em;color:#737373}body{background:#2b2a2a}.page-container{margin:auto;width:100%;max-width:1200px;overflow:hidden}.page-container .footer-container{margin-top:40px}
